--- a/src/server/server.ui
+++ b/src/server/server.ui
@@ -102,6 +102,9 @@
              <property name="readOnly">
               <bool>true</bool>
              </property>
+             <property name="maximum">
+              <number>65535</number>
+             </property>
             </widget>
            </item>
           </layout>
