Added a score reset function.

--- a/src/server/server.ui
+++ b/src/server/server.ui
@@ -504,7 +504,7 @@
     <attribute name="title">
      <string>Score View</string>
     </attribute>
-    <widget class="QTableView" name="score_tbv">
+    <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
        <x>0</x>
@@ -513,6 +513,48 @@
        <height>481</height>
       </rect>
      </property>
+     <layout class="QVBoxLayout" name="verticalLayout_6">
+      <item>
+       <widget class="QTableView" name="score_tbv"/>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_12">
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="reset_score_btn">
+          <property name="text">
+           <string>&amp;Reset Scores</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+     </layout>
     </widget>
    </widget>
   </widget>
