--- a/src/deployer/deployer.ui
+++ b/src/deployer/deployer.ui
@@ -54,6 +54,11 @@
          <string>QEditor</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>Conf Editor</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item row="1" column="0">
