Made various changes to the projector controls
-Changed show question to hide answer instead
	this is because the question is always shown anyway
-Changed the UI to reflect new functions
>Begin question button will show the question to all clients including
projector AND start the count down timer
-Removed some functions from test_server to avoid compile errors
-Changed show nothing to show main screen. Functions to be implemented.

--- a/src/server/server.ui
+++ b/src/server/server.ui
@@ -318,9 +318,9 @@
      <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
-        <x>90</x>
+        <x>80</x>
         <y>40</y>
-        <width>391</width>
+        <width>418</width>
         <height>29</height>
        </rect>
       </property>
@@ -340,9 +340,9 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="p_show_nothing_btn">
+        <widget class="QPushButton" name="p_show_main_btn">
          <property name="text">
-          <string>Show N&amp;othing</string>
+          <string>Show &amp;Main screen</string>
          </property>
         </widget>
        </item>
@@ -405,20 +405,6 @@
           </widget>
          </item>
          <item>
-          <widget class="QLabel" name="label_7">
-           <property name="text">
-            <string>Answer:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="p_answer_line">
-           <property name="readOnly">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item>
           <widget class="QLabel" name="label_10">
            <property name="text">
             <string>Time:</string>
@@ -435,16 +421,16 @@
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_9">
            <item>
-            <widget class="QPushButton" name="p_show_q_btn">
+            <widget class="QPushButton" name="p_show_a_btn">
              <property name="text">
-              <string>Show &amp;Question</string>
+              <string>&amp;Show Answer</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="p_show_a_btn">
+            <widget class="QPushButton" name="p_hide_a_btn">
              <property name="text">
-              <string>&amp;Show Answer</string>
+              <string>&amp;Hide Answer</string>
              </property>
             </widget>
            </item>
@@ -453,28 +439,21 @@
          <item>
           <widget class="QPushButton" name="qstart_btn">
            <property name="text">
-            <string>Start Question Timer</string>
+            <string>&amp;Begin Question</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="qstop_btn">
            <property name="text">
-            <string>Stop Question Timer</string>
+            <string>Stop Question</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="qpause_btn">
            <property name="text">
-            <string>Pause Question Timer</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="p_show_qtime_btn">
-           <property name="text">
-            <string>Show Question T&amp;ime</string>
+            <string>Pause Question</string>
            </property>
           </widget>
          </item>
@@ -504,7 +483,7 @@
     <attribute name="title">
      <string>Score View</string>
     </attribute>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>0</x>
