Server: Added stubs for user and team score views.

--- a/src/server/server.ui
+++ b/src/server/server.ui
@@ -530,6 +530,20 @@
          </spacer>
         </item>
         <item>
+         <widget class="QPushButton" name="userview_btn">
+          <property name="text">
+           <string>&amp;User view</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="teamview_btn">
+          <property name="text">
+           <string>&amp;&amp;Team View</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QPushButton" name="reset_score_btn">
           <property name="text">
            <string>&amp;Reset Scores</string>
