Contestant: Some minor improvements to UI
Also increased the font size of the question text box.

--- a/src/client/ending.ui
+++ b/src/client/ending.ui
@@ -134,7 +134,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Exit</string>
+      <string>&amp;Exit</string>
      </property>
     </widget>
    </item>
