--- a/src/client/elims.ui
+++ b/src/client/elims.ui
@@ -166,8 +166,20 @@
      </item>
      <item>
       <widget class="QTextEdit" name="question_text">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="readOnly">
         <bool>true</bool>
+       </property>
+       <property name="html">
+        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:14pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
@@ -290,7 +302,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Previous</string>
+        <string>&amp;Previous</string>
        </property>
       </widget>
      </item>
@@ -302,7 +314,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Next</string>
+        <string>&amp;Next</string>
        </property>
       </widget>
      </item>
