--- a/src/client/login.ui
+++ b/src/client/login.ui
@@ -78,7 +78,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Login</string>
+          <string>&amp;Login</string>
          </property>
         </widget>
        </item>
@@ -90,7 +90,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Exit</string>
+          <string>&amp;Exit</string>
          </property>
         </widget>
        </item>
