--- a/src/client/semifinals.ui
+++ b/src/client/semifinals.ui
@@ -139,6 +139,11 @@
      </item>
      <item>
       <widget class="QTextEdit" name="question_text">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="readOnly">
         <bool>true</bool>
        </property>
@@ -254,7 +259,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Previous</string>
+        <string>&amp;Previous</string>
        </property>
       </widget>
      </item>
@@ -266,7 +271,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Next</string>
+        <string>&amp;Next</string>
        </property>
       </widget>
      </item>
