--- a/src/client/summary.ui
+++ b/src/client/summary.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>456</width>
+    <width>526</width>
     <height>250</height>
    </rect>
   </property>
@@ -66,7 +66,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Review Answers</string>
+      <string>&amp;Review Answers</string>
      </property>
     </widget>
    </item>
@@ -78,7 +78,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Submit Answers</string>
+      <string>&amp;Submit Answers</string>
      </property>
     </widget>
    </item>
