--- a/resources/projector_themes/it/projector.css
+++ b/resources/projector_themes/it/projector.css
@@ -1,22 +1,29 @@
-* {
-	margin: 0;
-	padding: 0;
-	font: 16px/1.125em Arial, Helvetica, "DejaVu Sans", sans-serif;
-}
 
 body {
-	background-color: #fff;
+	background-color: beige;
 	padding: 0 12px;
 }
 
+a{
+	font-size: 28px;
+}
 h1 {
+	text-align:center;
+	color: #3333ff;
 	font-weight: 600;
-	font-size: 24px;
+	font-size: 48px;
 	margin: 12px 0;
 }
 
-h2 {
-	font-size: 16px;
+h2 {	
+	text-align: right;
+	font-size: 28 px;
+}
+
+table{
+	margin-left:auto;
+	margin-right:auto;
+	width:50%;
 }
 
 td, th {
@@ -24,10 +31,23 @@ td, th {
 }
 
 td {
-	background-color: #fefefe;
+	background-color: white;
+	font-size: 20px;
 }
 
 th {
-	background-color: #eee;
-	font-weight: 600;
+	text-align:center;
+	color: white;
+	background-color: #7777FF;
+	font-weight: 400;
+	font-size:24px;
+}
+img
+{
+horizontal-align:text-top;
+}
+* {
+	margin: 0;
+	padding: 0;
+	font: 18px/1.125em , Helvetica, "DejaVu Sans", sans-serif;
 }
